HW lesson 10 part 2

--- a/lesson_10/index2.html
+++ b/lesson_10/index2.html
@@ -9,6 +9,7 @@
   <!--      width: 25vh;-->
   <!--    }-->
   <!--  </style>-->
+
 </head>
 <body>
 
@@ -27,5 +28,20 @@
 <!--<div id="text">Text disappear</div>-->
 <!--<button id="btn">Disappear</button>-->
 
+<!--<form id="form">-->
+<!--  <input type="number" placeholder="age" name="age">-->
+<!--  <button>Submit</button>-->
+<!--</form>-->
+
+<!--<form id="formTable">-->
+<!--  <input id="rowCount" type="number" placeholder="row">-->
+<!--  <input id="cellCount" type="number" placeholder="cell">-->
+<!--  <input id="content" type="text" placeholder="content">-->
+<!--  <button>Create</button>-->
+<!--</form>-->
+<!--<div id="container" style="border: 1px">-->
+<!--</div>-->
+
+<div id="priceBlock">100 грн</div>
 <script src="main10.js">
 </script>
