HW lesson 10 part 3

--- a/lesson_10/index2.html
+++ b/lesson_10/index2.html
@@ -42,6 +42,6 @@
 <!--<div id="container" style="border: 1px">-->
 <!--</div>-->
 
-<div id="priceBlock">100 грн</div>
+<div id="div3">100 грн</div>
 <script src="main10.js">
 </script>
