second part with style css

--- a/mini_final_project/second_page/user-details.html
+++ b/mini_final_project/second_page/user-details.html
@@ -3,11 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="second.css">
 </head>
 <body>
 <div id="postContent"></div>
-<button id="buttonBlock">post of current user</button>
+<button id="buttonBlock">Post of current user</button>
 <div id="postTittle"></div>
+
 <script src="second.js"></script>
 <script src="recurFunction.js"></script>
 </body>
