--- a/mini_final_project/main_page/index.html
+++ b/mini_final_project/main_page/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="main.css">
 </head>
 <body>
 <div id="content"></div>
