--- a/mini_final_project/third_page/post-details.html
+++ b/mini_final_project/third_page/post-details.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="third.css">
 </head>
 <body>
 <div>Details about post</div>
